# blitzy-curl

./: .gitignore  Cargo.toml  README.md  catalog-info.yaml  deny.toml  mkdocs.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
blitzy-docs/: project-guide.md
blitzy/documentation/: Project Guide.md  Technical Specifications.md
curl-rs/: Cargo.toml
curl-rs-ffi/: Cargo.toml  build.rs  cbindgen.toml
curl-rs-ffi/src/: easy.rs  error_codes.rs  global.rs  header.rs  lib.rs  mime.rs  mprintf.rs  multi.rs  options.rs  share.rs  slist.rs  types.rs  url.rs  ws.rs
curl-rs-lib/: Cargo.toml  build.rs
curl-rs-lib/src/: altsvc.rs  content_encoding.rs  cookie.rs  easy.rs  error.rs  escape.rs  getinfo.rs  headers.rs  hsts.rs  idn.rs  lib.rs  mime.rs  multi.rs  netrc.rs  options.rs  progress.rs  psl.rs  ratelimit.rs  request.rs  setopt.rs  share.rs  slist.rs  transfer.rs  url.rs  version.rs
curl-rs-lib/src/auth/: basic.rs  bearer.rs  digest.rs  kerberos.rs  mod.rs  negotiate.rs  ntlm.rs  sasl.rs  scram.rs
curl-rs-lib/src/conn/: cache.rs  connect.rs  filters.rs  h1_proxy.rs  h2_proxy.rs  happy_eyeballs.rs  haproxy.rs  https_connect.rs  mod.rs  shutdown.rs  socket.rs
curl-rs-lib/src/dns/: doh.rs  hickory.rs  mod.rs  system.rs
curl-rs-lib/src/protocols/: dict.rs  file.rs  ftp.rs  ftp_list.rs  gopher.rs  imap.rs  ldap.rs  mod.rs  mqtt.rs  pingpong.rs  pop3.rs  rtsp.rs  smb.rs  smtp.rs  telnet.rs  tftp.rs  ws.rs
curl-rs-lib/src/protocols/http/: aws_sigv4.rs  chunks.rs  h1.rs  h2.rs  h3.rs  mod.rs  proxy.rs
curl-rs-lib/src/protocols/ssh/: mod.rs  scp.rs  sftp.rs
curl-rs-lib/src/proxy/: mod.rs  noproxy.rs  socks.rs
curl-rs-lib/src/tls/: config.rs  hostname.rs  keylog.rs  mod.rs  session_cache.rs
curl-rs-lib/src/util/: base64.rs  bufq.rs  dynbuf.rs  fnmatch.rs  hash.rs  hmac.rs  llist.rs  md5.rs  mod.rs  mprintf.rs  nonblock.rs  parsedate.rs  rand.rs  select.rs  sendf.rs  sha256.rs  splay.rs  strerror.rs  strparse.rs  timediff.rs  timeval.rs  warnless.rs
curl-rs/src/: args.rs  config.rs  dirhier.rs  filetime.rs  findfile.rs  formparse.rs  getpass.rs  help.rs  ipfs.rs  libinfo.rs  main.rs  msgs.rs  operate.rs  operhlp.rs  paramhelp.rs  parsecfg.rs  progress_display.rs  setopt.rs  ssls.rs  stderr.rs  terminal.rs  urlglob.rs  util.rs  var.rs  writeout.rs  writeout_json.rs  xattr.rs
curl-rs/src/callbacks/: debug.rs  header.rs  mod.rs  progress.rs  read.rs  seek.rs  socket.rs  write.rs
docs/: CURL-DISABLE.md  HTTP3.md  INSTALL.md  INTERNALS.md  RUSTLS.md  index.md  technical-specifications.md
docs/internals/: CONNECTION-FILTERS.md  CURLX.md  TLS-SESSIONS.md
include/curl/: curl.h
