[workspace]
members = ["curl-rs-lib", "curl-rs", "curl-rs-ffi"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "curl"
repository = "https://github.com/curl/curl"

[workspace.dependencies]
# Core Runtime and Networking
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat", "io"] }
bytes = "1"
futures-util = "0.3"
pin-project-lite = "0.2"
socket2 = "0.5"

# HTTP/1.1 + HTTP/2
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "tokio"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
h2 = "0.4"

# HTTP/3 + QUIC
quinn = "0.11.9"
h3 = "0.0.7"
h3-quinn = "0.0.10"

# TLS (rustls exclusively)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "1"
rustls-pemfile = "2"

# SSH (SFTP/SCP)
russh = "0.55"
russh-sftp = "2.1"
russh-keys = "0.49"

# DNS (optional)
hickory-resolver = "0.25"

# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }
clap_complete = "4"

# FFI
libc = "0.2"

# Cryptography
sha2 = "0.10"
md-5 = "0.10"
md4 = "0.10"
hmac = "0.12"
des = "0.8"
base64 = "0.22"
rand = "0.8"

# Compression
flate2 = "1"
brotli = "8"
zstd = "0.13"

# Serialization and Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
percent-encoding = "2"
idna = "1"
publicsuffix = "2"
glob = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"

# Dev Dependencies
rcgen = "0.14"
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
