[package]
name = "curl-rs-ffi"
version = "8.19.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI crate providing libcurl C ABI compatibility — exposes all CURL_EXTERN symbols"
repository.workspace = true
publish = false

[lib]
name = "curl_rs_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
curl-rs-lib = { path = "../curl-rs-lib" }
libc = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
cbindgen = "0.29.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
