[package]
name = "curl-rs"
version = "8.19.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "curl command-line tool rewritten in Rust — 1:1 functional parity with curl 8.x"
repository.workspace = true
publish = false
default-run = "curl-rs"

[[bin]]
name = "curl-rs"
path = "src/main.rs"

[dependencies]
curl-rs-lib = { path = "../curl-rs-lib" }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
